# bearwasm

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
include/bearwasm/: BinaryFormat.h  Format.h  FriggAllocator.h  Interpreter.h  Module.h  Stack.h  Util.h  VirtualMachine.h  host.hpp  libc.h
src/: ASMInterpreter.asm  Interpreter.cpp  Module.cpp  Util.cpp  VirtualMachine.cpp  libc.cpp  main.cpp
test/: add.c  big-stack.c  ffi.c  infinite-recursion.c  loop.c  meme-man-1.c  meme-man-2.c  qookie-1.c  qookie-2.c  test.c  test.html
